@@ -1,4 +1,7 @@
-$Id: CHANGES,v 1.90 2009/09/10 11:48:09 psavola Exp $
+$Id: CHANGES,v 1.91 2009/11/07 18:42:14 psavola Exp $
+
+07/11/2009	Allow radvd.conf prefix, clients, route, and RDNSS options
+		to be in any order.  Patch from Michael Stapelberg.
 
 10/09/2009	Release 1.5.
 
